--- a/src/html/contactame.html
+++ b/src/html/contactame.html
@@ -7,7 +7,6 @@
     <title>DHT Contáctame</title>
     <!-- Links CSS -->
     <link rel="stylesheet" href="../CSS/normalize.css">
-    <link rel="stylesheet" href="../CSS/rem.css">
     <link rel="stylesheet" href="../CSS/contactame.css">
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- Tipografias -->
@@ -32,7 +31,8 @@
             <div class="container-fluid">
                 <div class="container text-center">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-xxl">
+                            <!-- Barra de navegación -->
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                                 aria-label="Toggle navigation">
@@ -41,17 +41,20 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav ">
                                     <li class="nav-item navtext">
-                                        <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                                        <a class="nav-link active text-light" aria-current="page"
+                                            href="/index.html">Home</a>
                                     </li>
                                     <li class="nav-item navtext">
                                         <a class="nav-link active text-light" aria-current="page"
-                                            href="#">Habilidades</a>
+                                            href="#habilidades">Habilidades</a>
                                     </li>
                                     <li class="nav-item navtext">
-                                        <a class="nav-link active text-light" aria-current="page" href="#">Proyectos</a>
+                                        <a class="nav-link active text-light" aria-current="page"
+                                            href="#proyectos">Proyectos</a>
                                     </li>
                                     <li class="nav-item navtext">
-                                        <a class="nav-link active text-light" aria-current="page" href="#">Cotáctame</a>
+                                        <a class="nav-link active text-light" aria-current="page"
+                                            href="./contactame.html">Cotáctame</a>
                                     </li>
                                 </ul>
                             </div>
@@ -64,33 +67,46 @@
 
     <main>
         <!--  ********** Formulario  **********  -->
-        <div class="form-container">
-            <form action="">
-                <div class="row">
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-                    </div>
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1"
-                        placeholder="name@example.com">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-            </form>
+        <!-- formulario  -->
+        <div class="container text-center form-container">
+            <h2>Contáctame</h2>
 
+            <form action="">
+                <fieldset>
+                    <!-- Primer campo -->
+                    <div class="mb-3 form-group">
+                        <label for="Nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control text-center" id="Nombre" name="Nombre"
+                            placeholder="Ingresa tu nombre">
+                    </div>
+                    <!-- segundo campo -->
+                    <div class="mb-3 form-group">
+                        <label for="Apellido" class="form-label">Apellido</label>
+                        <input type="text" class="form-control text-center" id="Apellido" name="Apellido"
+                            placeholder="Ingresa tu primer Apellido">
+                    </div>
+                    <!-- tercer campo -->
+                    <div class="mb-3 form-group">
+                        <label for="email" class="form-label">Correo electrónico</label>
+                        <input type="email" class="form-control text-center" id="email" name="email"
+                            placeholder="Ingresa tu correo electrónico">
+                    </div>
+                    <!-- Text Area -->
+                    <div class="mb-3 form-group">
+                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+
+                    <!-- Boton -->
+                    <button type="submit" class="btn btn-danger" id="submit">Enviar</button>
+                </fieldset>
+            </form>
         </div>
     </main>
 
 
     <!-- ********** Footer ********** -->
-    <footer class="py-4 footer-bg bottom">
+    <footer class="py-4 footer-bg fixed-bottom">
         <!--  Boton cv-->
         <div class="button text-center btnFooter" data-tooltip="Size: 20Mb">
             <div class="button-wrapper">
