--- a/src/html/contactame.html
+++ b/src/html/contactame.html
@@ -66,39 +66,56 @@
     </header>
 
     <main>
-        <!--  ********** Formulario  **********  -->
-        <!-- formulario  -->
+
         <div class="container text-center form-container">
             <h2>Contáctame</h2>
 
-            <form action="">
+            <!--  ********** Formulario  **********  -->
+            <!-- Alertas -->
+            <div class="alert alert-danger fade show" style="display:none;" role="alert" id="alertValidaciones">
+                <p id="alertValidacionesTexto"></p>
+            </div>
+            <form action="" class="needs-validation" novalidate>
                 <fieldset>
-                    <!-- Primer campo -->
+                    <!-- Nombre -->
                     <div class="mb-3 form-group">
                         <label for="Nombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control text-center" id="Nombre" name="Nombre"
-                            placeholder="Ingresa tu nombre">
+                            placeholder="Ingresa tu nombre" value="" required>
+                        <div class="invalid-feedback">
+                            Nombre inválido
+                        </div>
                     </div>
-                    <!-- segundo campo -->
+                    <!-- Apellido -->
                     <div class="mb-3 form-group">
                         <label for="Apellido" class="form-label">Apellido</label>
                         <input type="text" class="form-control text-center" id="Apellido" name="Apellido"
-                            placeholder="Ingresa tu primer Apellido">
+                            placeholder="Ingresa tu Apellido" value="" required>
+                        <div class="invalid-feedback">
+                            Apellido inválido
+                        </div>
                     </div>
                     <!-- tercer campo -->
                     <div class="mb-3 form-group">
                         <label for="email" class="form-label">Correo electrónico</label>
                         <input type="email" class="form-control text-center" id="email" name="email"
-                            placeholder="Ingresa tu correo electrónico">
+                            placeholder="Ingresa tu correo electrónico" value="" required>
+                        <div class="invalid-feedback">
+                            Correo electrónico invalido
+                        </div>
                     </div>
                     <!-- Text Area -->
                     <div class="mb-3 form-group">
-                        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" id="mensaje" rows="5"></textarea>
+                        <div class="invalid-feedback">
+                            Mensaje invalido
+                        </div>
                     </div>
 
                     <!-- Boton -->
-                    <button type="submit" class="btn btn-danger" id="submit">Enviar</button>
+                    <button type="submit" class="btn btn-info" id="btnEnviar">Enviar</button>
+                    <button type="reset" class="btn btn-outline-secondary" id="btnReset">Restablecer</button>
                 </fieldset>
             </form>
         </div>
@@ -106,7 +123,7 @@
 
 
     <!-- ********** Footer ********** -->
-    <footer class="py-4 footer-bg fixed-bottom">
+    <footer class="py-5 footer-bg">
         <!--  Boton cv-->
         <div class="button text-center btnFooter" data-tooltip="Size: 20Mb">
             <div class="button-wrapper">
@@ -153,8 +170,11 @@
         </div>
     </footer>
 
-
-
+    <!-- alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- script validacion javascript -->
+    <script src="../js/validacion.js"></script>
+    <!-- script javascript y bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
