--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="src/CSS/normalize.css" as="style">
     <link rel="stylesheet" href="./src/CSS/style.css">
     <link rel="stylesheet" href="./src/CSS/cards_habilidades.css">
+    <link rel="stylesheet" href="./src/CSS/contactame.css">
     <!-- Tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,9 +72,10 @@
         <div class="container">
             <div class="row">
                 <div class=" col col-md-8 text-start presentacion container">
-                    
-                    <h1 class="desarrolladora text-light ">DESARROLLADORA</br> 
-                    <span class="typed"></span></h1>
+
+                    <h1 class="desarrolladora text-light ">DESARROLLADORA</br>
+                        <span class="typed"></span>
+                    </h1>
 
                     <h3 class="miNombre text-light">Daniela Heredia Tolumes</h3>
                     <div>
@@ -209,8 +211,7 @@
                 <div class="col cont_Cards text-center">
                     <div class="card text-center">
                         <div class="img-box">
-                            <img
-                                src="./src/img/tech2.png" width="100px" height="100px">
+                            <img src="./src/img/tech2.png" width="100px" height="100px">
                         </div>
                         <div class="content content_habilidades">
                             <h2>Habilidades Técnicas</h2>
@@ -245,8 +246,7 @@
                 <div class="col cont_Cards">
                     <div class="card">
                         <div class="img-box">
-                            <img
-                                src="./src/img/certificado2.png">
+                            <img src="./src/img/certificado2.png">
                         </div>
                         <div class="content content_habilidades">
                             <h2></h2>
@@ -420,6 +420,89 @@
         </div>
     </div>
 
+    <!-- ******FORMULARIO CONTACTO *******-->
+    <div class="container-xl">
+        <div class="row">
+            <!-- formulario -->
+            <div class=" col text-start ">
+                <div class="container text-center form-container">
+                    <h2>Contáctame</h2>
+
+                    <!--  ********** Formulario  **********  -->
+                    <!-- Alertas -->
+                    <div class="alert alert-danger fade show" style="display:none;" role="alert" id="alertValidaciones">
+                        <p id="alertValidacionesTexto"></p>
+                    </div>
+                    <form action="" class="needs-validation" novalidate>
+                        <fieldset>
+                            <!-- Nombre -->
+                            <div class="mb-3 form-group">
+                                <label for="Nombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control text-center" id="Nombre" name="Nombre"
+                                    placeholder="Ingresa tu nombre" value="" required>
+                                <div class="invalid-feedback">
+                                    Nombre inválido
+                                </div>
+                            </div>
+                            <div class="alert alert-danger fade show" style="display:none;" role="alert"
+                                id="alertValidacionesNombre">
+                                <p id="alertValidacionesTextoNombre"></p>
+                            </div>
+                            <!-- Apellido -->
+                            <div class="mb-3 form-group">
+                                <label for="Apellido" class="form-label">Apellido</label>
+                                <input type="text" class="form-control text-center" id="Apellido" name="Apellido"
+                                    placeholder="Ingresa tu Apellido" value="" required>
+                                <div class="invalid-feedback">
+                                    Apellido inválido
+                                </div>
+                            </div>
+                            <div class="alert alert-danger fade show" style="display:none;" role="alert"
+                                id="alertValidacionesApellido">
+                                <p id="alertValidacionesTextoApellido"></p>
+                            </div>
+                            <!-- Email -->
+                            <div class="mb-3 form-group">
+                                <label for="email" class="form-label">Correo electrónico</label>
+                                <input type="email" class="form-control text-center form-border" id="email" name="email"
+                                    placeholder="Ingresa tu correo electrónico" value="" required>
+                                <div class="invalid-feedback">
+                                    Correo electrónico invalido
+                                </div>
+                            </div>
+                            <div class="alert alert-danger fade show" style="display:none;" role="alert"
+                                id="alertValidacionesEmail">
+                                <p id="alertValidacionesTextoEmail"></p>
+                            </div>
+                            <!-- Text Area -->
+                            <div class="mb-3 form-group">
+                                <label for="mensaje" class="form-label">Mensaje</label>
+                                <textarea class="form-control" id="mensaje" rows="5"></textarea>
+                                <div class="invalid-feedback">
+                                    Mensaje invalido
+                                </div>
+                            </div>
+                            <div class="alert alert-danger fade show" style="display:none;" role="alert" id="alertValidacionesMensaje">
+                                <p id="alertValidacionesTextoMensaje"></p>
+                              </div>
+
+                            <!-- Boton -->
+                            <button type="submit" class="btn btn-info" id="btnEnviar">Enviar</button>
+                            <button type="reset" class="btn btn-outline-secondary" id="btnReset">Restablecer</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+            <!-- Imagen -->
+            <div class="col text-center ">
+                <div class="animacion-email">
+                    <img src="/src/img/email.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- ****** FOOTER ***** -->
 
     <footer class="py-4 footer-bg bottom">
@@ -469,10 +552,13 @@
         </div>
     </footer>
 
+
+
     <!-- script libreria typed.js -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Script Javascript -->
     <script src="./src/js/main.js"></script>
+    <script src="/src/js/validacion.js"></script>
     <!-- script javascript con Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
