Ajuste de vínculo para imagen

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             <!-- Imagen -->
             <div class="col-md-5 text-center ">
                 <div class="animacion-email">
-                    <img src="/src/img/email.png" alt="" class="img-fluid">
+                    <img src="./src/img/email.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
