--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
         <div class="container">
             <div class="row">
                 <div class=" col col-md-8 text-start presentacion container">
+                    <div class="typed-container">
 
-                    <h1 class="desarrolladora text-light ">DESARROLLADORA</br>
-                        <span class="typed"></span>
-                    </h1>
+                        <h1 class="desarrolladora text-light ">DESARROLLADORA WEB</h1>
+                        
+                        <div class="typed"></div>
+                    </div>
 
                     <h3 class="miNombre text-light">Daniela Heredia Tolumes</h3>
                     <div>
@@ -98,7 +100,7 @@
                 <!-- Imagen -->
                 <div class="col-md-4 text-center ">
                     <div >
-                        <img src="/src/img/DHT.png" alt="" class="img-fluid">
+                        <img src="./src/img/DHT.png" alt="" class="img-fluid">
                     </div>
                 </div>
                 <div class="row">
@@ -503,7 +505,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Script Javascript -->
     <script src="./src/js/main.js"></script>
-    <script src="/src/js/validacion.js"></script>
+    <script src="./src/js/validacion.js"></script>
     <!-- script javascript con Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
