--- a/index.html
+++ b/index.html
@@ -89,13 +89,7 @@
                         <span>CDMX, México</span>
                     </div>
 
-                    <p class="miDescripcion text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Nisi
-                        temporibus libero voluptate aliquam sequi nobis, aut nam eum maxime voluptates expedita
-                        optio quasi! Est, numquam velit expedita at voluptatum libero. Lorem ipsum dolor sit,
-                        amet consectetur adipisicing elit. Sint quasi esse, explicabo sunt atque nobis vel
-                        ratione quibusdam tenetur minima quae fuga excepturi facilis, dignissimos ab nemo. Nam,
-                        ad ipsa.</p>
+                    <p class="miDescripcion text-light">Desarrolladora web Jr. con enfoque en frontend. Poseo habilidades técnicas en Figma, HTML5, CSS3, Bootstrap y JavaScript, destinadas al desarrollo de interfaces de usuario atractivas, intuitivas y funcionales (UX/UI). También cuento con conocimientos básicos en MySQL, Java y R. Utilizo mis habilidades de liderazgo, planificación, comunicación y trabajo en equipo para resolver problemas y garantizar el éxito de los proyectos. Me apasiona la innovación y la tecnología. Me identifico con la mentalidad de crecimiento, por tanto, mi objetivo es seguir desarrollando mis habilidades asumiendo nuevos retos.</p>
                 </div>
                 <!-- Imagen -->
                 <div class="col-md-4 text-center ">
