--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                     <div class="project">
                         <img src="./src/img/proyectoIntegrador.png" alt="Proyecto integrador">
                         <div class="content">
-                            <a href="./assets/images/p-1.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="./assets/images/p-2.jpg" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver Proyecto</a>
+                            <a href="https://github.com/FranciscoNunezAlonso/ProyectoIntegradorFrontEnd.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -236,8 +236,7 @@
                     <div class="project">
                         <img src="./src/img/Blog.png" alt="Blog - Bienestar mental en los perros">
                         <div class="content">
-                            <a href="./assets/images/p-2.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="https://github.com/DanHT22/primerPaginaWeb.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -245,8 +244,7 @@
                     <div class="project">
                         <img src="./src/img/pokeAPI.png" alt="Pokeapi">
                         <div class="content">
-                            <a href="./assets/images/p-3.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="https://github.com/DanHT22/pokeAPI.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -254,8 +252,7 @@
                     <div class="project">
                         <img src="./src/img/proyectoTablaHTML.png" alt="Tabla HTML">
                         <div class="content">
-                            <a href="./assets/images/p-6.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="./assets/images/p-2.jpg" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -263,8 +260,7 @@
                     <div class="project">
                         <img src="./src/img/proyectoDbeuty.png" alt="ecommerce Dbeuty">
                         <div class="content">
-                            <a href="./assets/images/p-5.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="https://github.com/DanHT22/appWeb.Eq6.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -272,8 +268,7 @@
                     <div class="project">
                         <img src="./src/img/calculadoraJS.png" alt="calculadora js">
                         <div class="content">
-                            <a href="./assets/images/p-4.jpg" data-fancybox="gallery" class="btn btn-outline-light">View
-                                Project</a>
+                            <a href="https://github.com/DanHT22/calculadora_JS.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -307,7 +302,7 @@
                             <textarea name="" class="form-control" placeholder="Mensaje" rows="4"></textarea>
                         </div>
                         <div class="form-group text-center col-md-12">
-                            <button class="btn btn-brand">Send Message</button>
+                            <button class="btn btn-brand">Enviar</button>
                         </div>
                     </form>
                 </div>
