--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio DHT</title>
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <!-- animate scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- fansibox -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="./src/CSS/style.css">
     <!-- Tipografias -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +23,7 @@
         rel="stylesheet">
     <!-- Icono pestaña -->
     <link rel="shortcut icon" href="src/icons/atomo.png">
+
 
 </head>
 
@@ -116,7 +120,7 @@
                     </div>
 
                     <div data-aos="fade-up" data-aos-delay="200">
-                        <a href="#" class="btn btn-brand">Descargar CV</a>
+                        <button class="btn btn-brand" id="btnDownloadCV">Descargar CV</button>
                     </div>
                 </div>
             </div>
@@ -227,8 +231,10 @@
                     <div class="project">
                         <img src="./src/img/proyectoIntegrador.png" alt="Proyecto integrador">
                         <div class="content">
-                            <a href="./assets/images/p-2.jpg" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver Proyecto</a>
-                            <a href="https://github.com/FranciscoNunezAlonso/ProyectoIntegradorFrontEnd.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/proyectoIntegrador.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/FranciscoNunezAlonso/ProyectoIntegradorFrontEnd.git"
+                                class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -236,7 +242,10 @@
                     <div class="project">
                         <img src="./src/img/Blog.png" alt="Blog - Bienestar mental en los perros">
                         <div class="content">
-                            <a href="https://github.com/DanHT22/primerPaginaWeb.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/Blog.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/primerPaginaWeb.git" 
+                                class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -244,7 +253,10 @@
                     <div class="project">
                         <img src="./src/img/pokeAPI.png" alt="Pokeapi">
                         <div class="content">
-                            <a href="https://github.com/DanHT22/pokeAPI.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/pokeAPI.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/pokeAPI.git" 
+                                class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -252,7 +264,10 @@
                     <div class="project">
                         <img src="./src/img/proyectoTablaHTML.png" alt="Tabla HTML">
                         <div class="content">
-                            <a href="./assets/images/p-2.jpg" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/proyectoTablaHTML.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/Tabla_Elementos_HTLM.git"  class="btn btn-outline-light"
+                                target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -260,7 +275,10 @@
                     <div class="project">
                         <img src="./src/img/proyectoDbeuty.png" alt="ecommerce Dbeuty">
                         <div class="content">
-                            <a href="https://github.com/DanHT22/appWeb.Eq6.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/proyectoDbeuty.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/appWeb.Eq6.git"
+                                class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -268,7 +286,10 @@
                     <div class="project">
                         <img src="./src/img/calculadoraJS.png" alt="calculadora js">
                         <div class="content">
-                            <a href="https://github.com/DanHT22/calculadora_JS.git" data-fancybox="gallery" class="btn btn-outline-light" target="_blank">Ver código</a>
+                            <a href="./src/img/calculadoraJS.png" data-fancybox="gallery"
+                                class="btn btn-outline-light" target="_blank">Ver Mas</a>
+                            <a href="https://github.com/DanHT22/calculadora_JS.git" 
+                                class="btn btn-outline-light" target="_blank">Ver código</a>
                         </div>
                     </div>
                 </div>
@@ -288,21 +309,32 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-8" data-aos="fade-up" data-aos-delay="200">
-                    <form action="#" class="row g-3">
+                    <form class="row g-3">
                         <div class="form-group col-md-4">
-                            <input type="text" class="form-control" placeholder="Nombre">
+                            <input type="text" class="form-control" placeholder="Nombre" id="Nombre">
+                            <p class="alerta" id="alertValidacionesNombre"> El nombre ingreado no es valido, debe de
+                                contener al menos 3 caracteres.</p>
                         </div>
                         <div class="form-group col-md-4">
-                            <input type="text" class="form-control" placeholder="Apellido">
+                            <input type="text" class="form-control" placeholder="Apellido" id="Apellido">
+                            <p class="alerta" id="alertValidacionesApellido"> El Apellido ingresado no es válido, debe
+                                de contener al menos 3 caracteres.</p>
                         </div>
                         <div class="form-group col-md-4">
-                            <input type="email" class="form-control" placeholder="Correo Electrónico">
+                            <input type="email" class="form-control" placeholder="Correo Electrónico" id="email">
+                            <p class="alerta" id="alertValidacionesEmail"> El correo electrónico ingresado no es válido.
+                            </p>
                         </div>
                         <div class="form-group col-md-12">
-                            <textarea name="" class="form-control" placeholder="Mensaje" rows="4"></textarea>
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje :</label>
+                            <textarea name="mensaje" class="form-control" placeholder="" rows="4"
+                                id="mensaje"></textarea>
+                            <p class="alerta" id="alertValidacionesMensaje"> El Mensaje debe de contener al menos 20
+                                caracteres.</p>
                         </div>
                         <div class="form-group text-center col-md-12">
-                            <button class="btn btn-brand">Enviar</button>
+                            <button class="btn btn-brand" id="btnEnviar">Enviar</button>
+                            <button class="btn btn-brand" id="btnReset">Limpiar</button>
                         </div>
                     </form>
                 </div>
@@ -350,9 +382,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- archivos javascript -->
     <script src="./src/js/main.js"></script>
     <script src="./src/js/validacion.js"></script>
-  
+    <script src="./src/js/downloadCV.js"></script>
+    <!-- sweet alert -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 
 </body>
 
