Correción en validacion formulario

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                             </p>
                         </div>
                         <div class="form-group col-md-12">
-                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje :</label>
+                            <label for="name" class="form-label">Mensaje :</label>
                             <textarea name="mensaje" class="form-control" placeholder="" rows="4"
                                 id="mensaje"></textarea>
                             <p class="alerta" id="alertValidacionesMensaje"> El Mensaje debe de contener al menos 20
