--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
-
-
     <!-- Barra de navegación -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
         <div class="container text-start">
@@ -47,10 +45,6 @@
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                                 <li class="nav-item navtext navbar-margin-l rounded">
                                     <a class="nav-link active text-light aNav" aria-current="page" href="#home">Home</a>
-                                </li>
-                                <li class="nav-item navtext">
-                                    <a class="nav-link active text-light aNav" aria-current="page" href="#sobremi">Sobre
-                                        mi</a>
                                 </li>
                                 <li class="nav-item navtext">
                                     <a class="nav-link active text-light aNav" aria-current="page"
@@ -137,10 +131,10 @@
         </div>
     </section>
 
-    <!-- Sobre mi -->
-    <section id="sobremi" class="section-padding section-connector min-vh-100">
+    <!-- habilidades -->
+    <section id="habilidades" class="section-padding section-connector min-vh-100">
         <div class="container">
-            <div id="habilidades">
+            <div>
                 <div class="row gy-4 text-center">
                     <h1 data-aos="fade-up" data-aos-delay="100">Tecnologías</h1>
                     <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="100">
