ajustes de texto-descripción

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             Como entusiasta del desarrollo web, me apasiona crear interfaces atractivas e intuitivas que 
                             proporcionen una  gran experiencia de usuario (UX/UI). 
                             <br><br>
-                            He trabajado bajo  la metodología  ágil Scrum y la filosofía Design Thinking en diversos variedad de proyectos.
+                            He trabajado bajo la metodología  ágil Scrum y la filosofía Design Thinking en diversos proyectos.
                         </p>
                     </div>
                     <div>
