ajuste logo mysql

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse collapsing-bg" id="navbarNav">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <ul class="navbar-nav mb-2 mb-lg-0 ">
                                 <li class="nav-item navtext navbar-margin-l rounded">
                                     <a class="nav-link active text-light aNav" aria-current="page" href="#home">Home</a>
                                 </li>
@@ -223,7 +223,7 @@
                     <div class="col-lg-2 col-sm-6" data-aos="fade-up" data-aos-delay="200">
                         <div class="service py-5 px-4">
                             <div class="service-icon">
-                                <img src="./src/icons/Mysql-2.png" alt="">
+                                <img src="./src/icons/mysql-2.png" alt="">
                             </div>
                             <p class="text-center" style="color:#00758E; margin-top: 10px;">MySql</p>
                         </div>
@@ -396,6 +396,7 @@
     <!-- script libreria typed.js -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+     <!-- script libreria fancybox -->
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- archivos javascript -->
